@startuml 05-erd
' ─────────────────────────────────────────────────────────
'  AI 여행가방 확인 플랫폼 — ERD
'  출처: docs/05-erd.md · database/schema.sql (셋은 짝이다)
'
'  채점 기준: "ERD 테이블 관계(1:N, N:M) 및 정규화 타당성"
'  ★ 표시 둘이 N:M 조인 테이블이고, 둘 다 속성을 가진다.
' ─────────────────────────────────────────────────────────

hide circle
skinparam backgroundColor #FFFFFF
skinparam dpi 160
skinparam shadowing false
skinparam defaultFontName "Apple SD Gothic Neo"
skinparam defaultFontSize 11
skinparam linetype ortho
skinparam ArrowColor #46524E
title 목표 데이터 모델 — 로그인 사용자 · 내 목록 · 추천 후보
caption users.login_id 추가 설계 · SQL·시드·DB 적용은 후속 작업

skinparam class {
  BackgroundColor #F5F7F6
  BorderColor #8A9A94
  FontColor #14201C
  BackgroundColor<<NM>> #D9EAE6
  BorderColor<<NM>> #0D6455
  BackgroundColor<<AI>> #FBF3E4
  BorderColor<<AI>> #8D5606
  BackgroundColor<<MASTER>> #EFEFF4
  BorderColor<<MASTER>> #6B6B84
}

entity "users" as users {
  * id : bigint <<PK>>
  --
  * login_id : varchar(30) <<UQ>>
  * email : varchar(255) <<UQ>>
  * password_hash : varchar(255)
  * nickname : varchar(50)
  * created_at : timestamptz
}

note left of users
  가입: 닉네임 · 아이디 · 비밀번호 · 이메일
  login_id는 로그인용, id는 내부 PK
  비밀번호는 해시만 저장
  여행·AI 작업은 인증 사용자에게 귀속
  세션은 서버 메모리 · 세션 테이블 없음
end note

entity "trips" as trips {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  * origin : varchar(100)
  * destination : varchar(100)
  country_code : char(2)
  * start_date : date
  * end_date : date
  * purpose : varchar(20)
  * transport : varchar(20)
  airline : varchar(50)
  departure_airport : char(3)
  arrival_airport : char(3)
  bag_type : varchar(20)
  bag_empty_g : integer
  weight_limit_g : integer
  note : text
  * status : varchar(20)
  * created_at : timestamptz
}

entity "checklist_items" as items {
  * id : bigint <<PK>>
  --
  * trip_id : bigint <<FK>>
  item_weight_id : bigint <<FK>>
  * name : varchar(100)
  * category : varchar(20)
  * qty : integer
  * priority : varchar(20)
  * source : varchar(10)
  * check_status : varchar(20)
  * created_at : timestamptz
  ..
  UNCHECKED / PREPARED /
  NEEDS_CHECK / **NOT_IN_PHOTO**
  PREPARED만 실제 완료
  photoStatus는 별도 조회 계산값
}

entity "trip_itineraries" as itin {
  * id : bigint <<PK>>
  --
  * trip_id : bigint <<FK>>
  * kind : varchar(20)
  * title : varchar(100)
  place : varchar(100)
  code : varchar(50)
  * start_at : timestamptz
  end_at : timestamptz
  note : text
  * created_at : timestamptz
  ..
  FLIGHT / LODGING / ACTIVITY /
  TRANSPORT / OTHER
}

entity "item_placements" as place {
  * checklist_item_id : bigint <<PK,FK>>
  --
  * compartment : varchar(20)
  * pos_x : numeric(4,3)
  * pos_y : numeric(4,3)
  * pos_z : numeric(4,3)
  * rotated : boolean
  * updated_at : timestamptz
  ..
  좌표는 0~1 상대값이다
  1:1 — 별도 id 를 두지 않는다
}

entity "trip_photos" as photos {
  * id : bigint <<PK>>
  --
  * trip_id : bigint <<FK>>
  * file_path : varchar(255)
  bag_kind : varchar(20)
  * uploaded_at : timestamptz
}

entity "detected_objects" as detected {
  * id : bigint <<PK>>
  --
  * photo_id : bigint <<FK>>
  * name : varchar(100)
  * qty : integer
  * confidence : numeric(4,3)
  * confidence_level : varchar(10)
  missing_info : varchar(100)
  label_text : varchar(200)
  * approved : boolean
  * created_at : timestamptz
  ..
  approved: 사후 수정 표식 · 등록 조건 아님
  인식 완료: 내 목록 자동 생성·연결·완료
}

entity "★ item_detections" as idt <<NM>> {
  * checklist_item_id : bigint <<PK,FK>>
  * detected_object_id : bigint <<PK,FK>>
  --
  * match_confidence : numeric(4,3)
  * confirmed_by_user : boolean
  * matched_at : timestamptz
}

entity "★ item_rule_checks" as irc <<NM>> {
  * checklist_item_id : bigint <<PK,FK>>
  * rule_id : bigint <<PK,FK>>
  --
  * verdict : varchar(20)
  missing_info : varchar(100)
  * decided_at : timestamptz
}

entity "transport_rules" as rules <<MASTER>> {
  * id : bigint <<PK>>
  --
  * transport : varchar(20)
  * keyword : varchar(100)
  * verdict : varchar(20)
  condition_note : text
  * description : text
  * source_url : varchar(255)
  * checked_at : date
}

entity "item_weights" as weights <<MASTER>> {
  * id : bigint <<PK>>
  --
  * keyword : varchar(100) <<UQ>>
  * category : varchar(20)
  * min_g : integer
  * typical_g : integer
  * max_g : integer
  * is_dense : boolean
  note : text
}

entity "ai_jobs" as jobs <<AI>> {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  trip_id : bigint <<FK>>
  * status : varchar(20)
  * job_type : varchar(30)
  * input_payload : **jsonb**
  output_payload : **jsonb**
  model_name : varchar(100)
  error_message : text
  * created_at : timestamptz
  completed_at : timestamptz
  ..
  PACKING_LIST / BAG_CHECK /
  WEIGHT_ESTIMATE / RULE_CHECK
}

' ── 1:N ───────────────────────────────────────────────────
users    ||--o{ trips
users    ||--o{ jobs
trips    ||--o{ items
trips    ||--o{ photos
trips    ||--o{ itin
trips    |o--o{ jobs
photos   ||--o{ detected
weights  |o--o{ items
items    ||--o| place

' ── N:M (조인 테이블 경유) ────────────────────────────────
items    ||--o{ idt
detected ||--o{ idt
items    ||--o{ irc
rules    ||--o{ irc

note right of place
  **1:1** 체크리스트 항목 ↔ 가방 안 자리
  자리를 안 잡은 물품은 행이 없다
  trip_id 를 두지 않는다 — 이행 종속
end note

note bottom of idt
  **N:M** 체크리스트 항목 ↔ 인식 물품
  한 항목에 후보 여럿, 한 후보가 여러 항목
  연결마다 신뢰도·사후 확인 여부가 다르다
  BAG_CHECK 결과·연결·자동 완료 등록을 한 트랜잭션으로 처리
  confirmed_by_user=false도 등록·집계에 포함
end note

note bottom of irc
  **N:M** 체크리스트 항목 ↔ 반입 규정
  한 물품이 여러 규정에 걸린다
  같은 규정이라도 물품마다 판정이 다르다
end note

note right of jobs
  **PACKING_LIST 후보는 output_payload에만 저장**
  source · acceptedItemId는 JSON 내부 서버 필드
  선택·승인 시에만 내 목록에 UNCHECKED로 등록
  acceptedItemId는 내 항목 ID 참조 (DB FK 아님)
  서버가 소유권·중복·삭제 시 연결 해제를 검증
  입력·출력 JSON Schema는 07-ai-ready.md
  완료율·사진 상태·미채택 필수 후보 수는 조회 시 계산
end note

legend bottom
  |<#D9EAE6>| ★ **N:M 조인 테이블** — 속성을 가진다 |
  |<#FBF3E4>| AI 결과 저장 (AI-Ready 원칙 2) |
  |<#EFEFF4>| 마스터 데이터 |
  |<#F5F7F6>| 도메인 테이블 |
endlegend

@enduml
